--- a/inline-tags.html
+++ b/inline-tags.html
@@ -7,22 +7,33 @@
   </head>
   <body>
 
-<p>Because of extreme weather, we're only going to meet f2f for one day in the entire first two weeks of class.</p>
+<p>Because of extreme weather, we're only going to meet f2f for <strong>one day</strong> in the entire first two weeks of class.</p>
 
-The use of emphasis (the em tag) is usually to signal a change in meaning through a change in emphasis. Consider the difference between the identical sentence, with different emphasis (emphasis on "I" in the first, and on "last" in the second):
+<p>The use of <strong>emphasis</strong> (the em tag) is usually to signal a change in meaning through a change in emphasis. Consider the difference between the identical sentence, with different emphasis (emphasis on "I" in the first, and on "last" in the second):</p>
 
-I didn't steal the last cookie.
+<p><em>I</em> didn't steal the last cookie.</p>
 
-I didn't steal the last cookie.
+<p>I didn't steal the <em>last</em> cookie.</p>
 
-Viburnums are a versatile landscape shrub with a certain je ne sais quoi that appeals to me. There are even some viburnums on the UWM campus. To quote Wikipedia about the name Viburnum, The generic name originated in Latin, where it referred to V. lantana.
+<p>Viburnums are a versatile landscape shrub with a certain je ne sais quoi that appeals to me. There are even some viburnums 
+on the <abbr title="University of Wisconsin-Milwaukee">UWM</abbr> campus. To quote Wikipedia about the name Viburnum, 
+<q>The generic name originated in Latin, where it referred to V. lantana.</q></p>
 
-One of the textbooks for this class is Don't Make Me Think Revisited by Steve Krug, who says of usability, It's not rocket surgery.
 
-H2O is the chemical formula for water. The area of a circle is pi r2.
+<p>One of the textbooks for this class is Don't Make Me Think Revisited by Steve Krug, who says of usability, 
+<q>It's not rocket surgery.</q></p>
 
-Vegetables aren’t healthy, tasty, fun or even very colourful any more, kids. No. They’re evil – and they’re coming to get you! So says an advert on ITV and backed by the UK’s leading supermarkets and Birds Eye, with endorsements from Hugh Fearnley-Whittingstall and Jamie Oliver.
 
-Notice how in the paragraph above, the bold text in the screen shot draws the eye and helps you find the beginning of the text? This is a common print convention in magazines or newspapers (digital and analog), which helps the sighted viewer find the beginning of a story on a page that has a lot of other information on it (other stories, advertisements, etc). The tag that creates this visual pathway is non-semantic because the bold text doesn't meaning anything special; it is just at the beginning, so the visual formatting grabs the eye.
+<p>H<sub>2</sub>O is the chemical formula for water. The area of a circle is pi r<sup>2</sup>.</p>
+
+
+<p><strong>Vegetables aren’t healthy, tasty, fun or even very colourful any more, kids.</strong> No. 
+They’re evil – and they’re coming to get you! So says an advert on ITV and backed by the <abbr title="United Kingdom">UK’s</abbr> leading supermarkets 
+and Birds Eye, with endorsements from Hugh Fearnley-Whittingstall and Jamie Oliver.</p>
+
+<p>Notice how in the paragraph above, the bold text in the screen shot draws the eye and helps you find the beginning of the text? 
+This is a common print convention in magazines or newspapers (digital and analog), which helps the sighted viewer find the beginning of a story on a page that has a 
+lot of other information on it (other stories, advertisements, etc). The tag that creates this visual pathway 
+is <strong>non-semantic</strong> because the bold text doesn't meaning anything special; it is just at the beginning, so the visual formatting grabs the eye.</p>
 
 </body>
