--- a/inline-tags.html
+++ b/inline-tags.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-<p>Because of extreme weather, we're only going to meet f2f for <strong>one day</strong> in the entire first two weeks of class.</p>
+<p>Because of extreme weather, we're only going to meet <abbr title="face to face">f2f</abbr> for <strong>one day</strong> in the entire first two weeks of class.</p>
 
 <p>The use of <strong>emphasis</strong> (the em tag) is usually to signal a change in meaning through a change in emphasis. Consider the difference between the identical sentence, with different emphasis (emphasis on "I" in the first, and on "last" in the second):</p>
 
@@ -15,12 +15,12 @@
 
 <p>I didn't steal the <em>last</em> cookie.</p>
 
-<p>Viburnums are a versatile landscape shrub with a certain je ne sais quoi that appeals to me. There are even some viburnums 
+<p>Viburnums are a versatile landscape shrub with a certain <em>je ne sais quoi</em> that appeals to me. There are even some viburnums 
 on the <abbr title="University of Wisconsin-Milwaukee">UWM</abbr> campus. To quote Wikipedia about the name Viburnum, 
-<q>The generic name originated in Latin, where it referred to V. lantana.</q></p>
+<q>The generic name originated in Latin, where it referred to <cite>V. lantana</cite>.</q></p>
 
 
-<p>One of the textbooks for this class is Don't Make Me Think Revisited by Steve Krug, who says of usability, 
+<p>One of the textbooks for this class is <cite>Don't Make Me Think Revisited</cite> by Steve Krug, who says of usability, 
 <q>It's not rocket surgery.</q></p>
 
 
@@ -28,7 +28,7 @@ on the <abbr title="University of Wisconsin-Milwaukee">UWM</abbr> campus. To quo
 
 
 <p><strong>Vegetables aren’t healthy, tasty, fun or even very colourful any more, kids.</strong> No. 
-They’re evil – and they’re coming to get you! So says an advert on ITV and backed by the <abbr title="United Kingdom">UK’s</abbr> leading supermarkets 
+They’re evil – and they’re coming to get you! So says an advert on <abbr title="International Televesion">ITV</abbr> and backed by the <abbr title="United Kingdom">UK’s</abbr> leading supermarkets 
 and Birds Eye, with endorsements from Hugh Fearnley-Whittingstall and Jamie Oliver.</p>
 
 <p>Notice how in the paragraph above, the bold text in the screen shot draws the eye and helps you find the beginning of the text? 
@@ -36,4 +36,9 @@ This is a common print convention in magazines or newspapers (digital and analog
 lot of other information on it (other stories, advertisements, etc). The tag that creates this visual pathway 
 is <strong>non-semantic</strong> because the bold text doesn't meaning anything special; it is just at the beginning, so the visual formatting grabs the eye.</p>
 
+<ul>
+    <a href="index.html">Home</a>
+    <a href="block-tags.html">Block Tags</a>
+</ul>
 </body>
+
