--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 
         <h1>Exercise 3</h1>
 <ul>
-    <a href="inline-tags.html">Inline Tags</a>
-    <a href="block-tags.html">Block Tags</a>
+    <li><a href="inline-tags.html">Inline Tags</a></li>
+    <li><a href="block-tags.html">Block Tags</a></li>
