--- a/inline-tags.html
+++ b/inline-tags.html
@@ -37,8 +37,8 @@ lot of other information on it (other stories, advertisements, etc). The tag tha
 is <strong>non-semantic</strong> because the bold text doesn't meaning anything special; it is just at the beginning, so the visual formatting grabs the eye.</p>
 
 <ul>
-    <a href="index.html">Home</a>
-    <a href="block-tags.html">Block Tags</a>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="block-tags.html">Block Tags</a></li>
 </ul>
 </body>
-
+</html>
