--- a/index.html
+++ b/index.html
@@ -11,3 +11,6 @@
 <ul>
     <li><a href="inline-tags.html">Inline Tags</a></li>
     <li><a href="block-tags.html">Block Tags</a></li>
+</ul>
+</body>
+</html>
